# meshtools3d

./: .gitignore  CGALDataType.hpp  CLAUDE.md  CMakeLists.txt  Chrono.cpp  Chrono.hpp  Dockerfile  GetPot.cpp  GetPot.hpp  INRreader.cpp  INRreader.hpp  LaplaceSolver.cpp  LaplaceSolver.hpp  Makefile  Mesh.cpp  Mesh.hpp  MyImageWrapper.hpp  My_Labeled_image_mesh_domain_3.hpp  README.md  ThicknessEvaluation.cpp  ThicknessEvaluation.hpp  VtkWriter.cpp  contributors.txt  data  data-template  dockerM3D.sh  main.cpp  mgmres.cpp  mgmres.hpp
.github/workflows/: ci.yml  release.yml
applications/: laplace_solver.cpp  main.cpp  parfile_builder.cpp
docker/: Dockerfile.legacy  Dockerfile.legacy-deps
docs/: INSTALL.md  Roadmap.md  install.md  install_legacy.md  macOS_bug_fix_v2.0-beta.md  macos_download_fix.md  parameter_file_schema.md
examples/: data_template
examples/pipeCoarse/: data_pipeCoarse
examples/pipeCoarse4Potential/: data_pipeCoarse
examples/sphereCoarse/: data_sphereCoarse
examples/sphereCoarse4Potential/: data_sphereCoarse
examples/sphereCoarse4Thickness/: data_sphereCoarse  evalthick.sh
examples/sphereMultilabel/: data_multilabel
m3d/include/: CGALDataType.hpp  GetPot.hpp  INRreader.hpp  LaplacePipeline.hpp  Mesh.hpp  MeshingPipeline.hpp  My_Labeled_image_mesh_domain_3.hpp  ThicknessEvaluation.hpp  VtkWriter.hpp  mgmres.hpp
m3d/src/: CMakeLists.txt  Chrono.cpp  GetPot.cpp  INRreader.cpp  LaplacePipeline.cpp  LaplaceSolver.cpp  Mesh.cpp  ThicknessEvaluation.cpp  VtkWriter.cpp  mgmres.cpp
matlab_utilities/: convertMat2Inr.m  convert_nrrd2inr.m  labeling.m  nrrdread.m
scripts/: bundle.sh  macos-fix-download.sh
thicknessOld/: IO.cpp  IO.h  evalgad.sh  execarp.sh  functions.cpp  functions.h  loading.cpp  loading.h  makefile  thicknessOld  thicknessOld.cpp
